adicionando required ao input

--- a/client/novo/novo.html
+++ b/client/novo/novo.html
@@ -4,7 +4,7 @@
 			<form>
 				<div class="form-group">
 					<label for="tarefa"> Tarefa </label>
-					<input type="text" id="tarefa" class="form-control" placeholder="Sua tarefa aqui">
+					<input type="text" id="tarefa" class="form-control" placeholder="Sua tarefa aqui" required>
 				</div>
 				<div class="form-group">
 					<button class="btn btn-success btn-block"> Nova Tarefa! </button>
